...
export type RootStackParamList = {
  StoreDetail: { store: Store };
  Login: undefined;
  Register: undefined;
  ForgotPassword: undefined;
  Main: undefined;
  Home: undefined;
  Wallet: undefined;
  Rewards: undefined;
  RewardDetail: { id: string };
  Referrals: undefined;
  Badges: undefined;
  Vouchers: undefined;
...
